feat(benchmark): wire step3 into job; include CSV gen in total wall-clock time